# kodexa-cli

./: .gitignore  cli.spec  kodexa-cli.spec  pyproject.toml
.github/workflows/: ai-pr-reviewer.yml  build-and-release.yml  test.yml
kodexa_cli/: cli.py
tests/: cli_runner_test.py  cli_test.py  config_test.py  conftest.py  test.json  test_cli.py  test_components.py  test_documents.py  test_login.py  test_profile.py  test_projects.py
