[tool.poetry]
name = "kodexa-cli"
version = "7.4.0"
description = "Command Line Tools for Kodexa"
authors = ["Austin Redenbaugh <austin@kodexa.com>", "Philip Dodds <philip@kodexa.com>", "Romar Cablao <rcablao@kodexa.com>", "Amadea Paula Dodds <amadeapaula@kodexa.com>", "John Patrick Sese <jp@kodexa.com>"]
readme = "README.md"
packages = [{include = "kodexa_cli"}]

[tool.poetry.scripts]
kodexa = 'kodexa_cli.cli:safe_entry_point'

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
kodexa = ">= 8.0.0, < 8.1.0"
click = "^8.2.1"
PyYAML = "^6.0.2"
rich = "^14.1.0"
wrapt = "^1.16.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
mkdocs-click = "^0.9.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"
pandas = "^2.3.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kodexa_cli --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
